Closed
Bug 66886
Opened 25 years ago
Closed 25 years ago
Make PSM dialogs use correct nsIPrompt
Categories
(Core :: Networking, defect)
Core
Networking
Tracking
()
VERIFIED
FIXED
People
(Reporter: bryner, Assigned: bryner)
Details
Attachments
(3 files)
|
14.44 KB,
patch
|
Details | Diff | Splinter Review | |
|
5.84 KB,
patch
|
Details | Diff | Splinter Review | |
|
13.75 KB,
patch
|
Details | Diff | Splinter Review |
PSM dialogs need to use the nsIPrompt from the associated channel so that they
are correctly parented.
| Assignee | ||
Comment 1•25 years ago
|
||
| Assignee | ||
Comment 2•25 years ago
|
||
The patch I just attached adds a reference from the nsIChannelSecurityInfo
object to the channel that created it, as we discussed. We then pass this to
the UI callbacks.
Can you both give this an r=? Thanks.
Status: NEW → ASSIGNED
Comment 3•25 years ago
|
||
adding thayes to cc list since he's interested in this topic.
Comment 4•25 years ago
|
||
Waiting on a new patch from bryner since his patch appears to be against an older
version of pipnss.
| Assignee | ||
Comment 5•25 years ago
|
||
Comment 6•25 years ago
|
||
I don't know enough about the internals of getting the nsIPrompt, so I ask that
danm review the code that gets the nsIPrompt from within the nssNSSSocketInfo.
For everything else r=javi
The nsIPrompt code looks good. Well, except(!) a couple of things. Are you sure
you need both proxied objects? All you're doing with proxiedCallbacks is QIing it
to an nsIPrompt. I'm pretty sure it doesn't gain you anything to run that through
the proxy machine. (whereas proxyprompt, of course, seems useful.)
The other thing is, sadly, at this point, callbacks may not successfully QI to
nsIPrompt at all. There are still a couple of renegade places that send something
else for the NotificationCallbacks. This is dealt with in places like
nsWalletService.cpp (rev 1.48, line 600). I'm not actually recommending you copy
that code, which falls back on Hidden Window. In theory, and we're working on
this, the day will come when the fallback won't be necessary. For now the bad
situation occurs only rarely if at all, but you should at least put in a warning
or assertion.
| Assignee | ||
Comment 8•25 years ago
|
||
I wasn't planning to proxy the call to GetInterface, but I got threadsafety
assertions when I didn't. If that means there's a problem somewhere else, maybe
we should track that down.
New patch to make sure proxyPrompt is non-null coming up.
| Assignee | ||
Comment 9•25 years ago
|
||
Comment 10•25 years ago
|
||
Heh. Sigh. Well, I guess extra proxies won't hurt. r=me on the nsIPrompt stuff.
Comment 11•25 years ago
|
||
Looks good to me.
In the call to promptForPassword can you change the following:
NS_ConvertASCIItoUCS2(" ").GetUnicode()
to use NS_LITERAL_STRING?
other than that,sr=mscott
| Assignee | ||
Comment 12•25 years ago
|
||
This was checked in, forgot to mark the bug fixed.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•