Bug 66886 - parent PSM dialogs correctly.  This fixes all of the cases in PSM2 and several cases in PSM1.  r=javi,danm.  sr=mscott.